cabal-version:      2.4
name:               hs-blog
version:            0.1.0.0
synopsis:           A custom blog generator

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Hajime Nozaki
maintainer:         nozaki369@outlook.jp

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-settings
    default-language: Haskell2010
    ghc-options:
        -Wall

library
    import: common-settings
    exposed-modules:
        HsBlog
            HsBlog.Convert
            HsBlog.Html
                HsBlog.Html.Internal
            HsBlog.Markup

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , directory
    hs-source-dirs:   src
    default-language: Haskell2010

executable Learn-Haskell
    import: common-settings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
          base ^>=4.14.3.0
        , hs-blog

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
        -O

test-suite Learn-Haskell-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
